force-app/main/default/objects/Production_Quota__c/Production_Quota__c.object-meta.xml
<CustomObject>
    <label>Production Quota</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Production Quota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>