force-app/main/default/objects/Production_Quota__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Production Quotas</relationshipLabel>
    <relationshipName>Production_Quotas</relationshipName>
    <type>Lookup</type>
</CustomField>