force-app/main/default/objects/Production_Quota__c/fields/Production_Amount_t__c.field-meta.xml
<CustomField>
    <fullName>Production_Amount_t__c</fullName>
    <label>Production Amount (t)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>