force-app/main/default/objects/Production_Quota__c/fields/Quota_Mt__c.field-meta.xml
<CustomField>
    <fullName>Quota_Mt__c</fullName>
    <label>Quota Mt</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>