force-app/main/default/objects/Production_Quota__c/fields/Quota_Type__c.field-meta.xml
<CustomField>
    <fullName>Quota_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quota Type</label>
    <referenceTo>QuotaType__c</referenceTo>
    <relationshipLabel>Production Quotas</relationshipLabel>
    <relationshipName>Production_Quotas</relationshipName>
    <type>Lookup</type>
</CustomField>