force-app/main/default/objects/Production_Quota__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Production Quotas</relationshipLabel>
    <relationshipName>Production_Quotas</relationshipName>
    <type>Lookup</type>
</CustomField>