force-app/main/default/objects/Production_Quota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Period__c</columns>
    <columns>Market_Segment__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Shop__c</columns>
    <columns>Quota_Type__c</columns>
    <columns>Product__c</columns>
    <columns>Production_Amount_t__c</columns>
    <columns>Quota_Mt__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>